# src/main/java/com/example/YONDU/entity/notice/Notice.java
@@ -1,0 +1,31 @@
+package com.example.YONDU.entity.notice;
+
+import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Table(name = "notice")
+@Getter
+@Setter
+public class Notice {
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "notice_id")
+    private Long noticeId;
+
+    @Column(name = "title")
+    private String title;
+    @Column(name = "content")
+    private String content;
+
+    @Column(name = "created_at")
+    private LocalDateTime createdAt;
+    @Column(name = "updated_at")
+    private LocalDateTime updatedAt;
+
+    private String author;
+
+}
